--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  //Constantes que se ocuparan en el lenguaje C# en los controladores, que luego se podran ocupar en las vistas. Trabajan de manera atributo: llave
+  "Texto": "Este es un texto cualquiera.",
+  "VariablesConfig": {
+    "var1": "Valor de config 1",
+    "var2": "Valor de config 2",
+    "var3": "Valor de config 3",
+    "varx": {
+      "default": false,
+      "advanced": {
+        "extremo": 777
+      }
+    }
+  }
+
 }
